--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Alvin's Portfolio
+title: Alvin Chia's Portfolio
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
-  Welcome to my blog. 
+  Aspiring to be a data scientist to employ analytics technique to gain insights to solve business problem 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
