--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,11 @@ remote_theme: mmistakes/so-simple-theme
 plugins:
   - jekyll-feed
 
+include:
+collections:
+  projects:
+    output: true
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
