--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Alvin Chia's Portfolio
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
-  Aspiring to be a data scientist to employ analytics technique to gain insights to solve business problem 
+  Leveraging on data to derive insights and prescribe recommendations to stakeholders to make business decisions for strategic growth.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
